# easy-chat

./: CHANGELOG.md  Cargo.toml  cliff.toml  deny.toml
.github/workflows/: build.yaml
chat-core/: Cargo.toml
chat-core/src/: config.rs
chat-server/: Cargo.toml  application.yaml
chat-server/fixtures/: private.pem  public.pem
chat-server/migrations/: 20240927083013_init.sql
chat-server/src/: config.rs  error.rs  lib.rs  main.rs
chat-server/src/api/: auth.rs  mod.rs
chat-server/src/middleware/: auth.rs  mod.rs  request_id.rs  server_time.rs
chat-server/src/model/: mod.rs  user.rs
chat-server/src/util/: jwt.rs  mod.rs
migrations/: 20240927083013_init.sql
notify-server/: Cargo.toml  index.html
notify-server/src/: lib.rs  main.rs  sse.rs
