[workspace]
members = ["chat-server", "notify-server"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.89"
thiserror = "1.0.64"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
chrono = "0.4.38"
