[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
test-util = ["sqlx-db-tester"]

[dependencies]
chat-core = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
axum = { version = "0.7.6", features = [
    "http2",
    "query",
    "tracing",
    "multipart",
] }
axum-extra = { version = "0.9.4", features = ["typed-header"] }
tower = { workspace = true }
tower-http = { workspace = true }
sqlx = { version = "0.8.2", features = [
    "chrono",
    "postgres",
    "runtime-tokio",
    "tls-rustls",
] }
chrono = { workspace = true }
argon2 = { version = "0.5.3", features = ["std"] }
uuid = { version = "1.10.0", features = ["v7"] }
jsonwebtoken = "9.3.0"
sqlx-db-tester = { version = "0.5.0", optional = true }

[dev-dependencies]
chat-server = { workspace = true, features = ["test-util"] }
